# nft-marketplace-server

./: .gitignore  Makefile  README.md  default.nix  flake.nix  nft-marketplace-server.cabal  release.nix  shell.nix
.github/workflows/: build.yml
deploy/: README.md  def.env  deploy-server-aws.sh  deploy-server.sh  deploy-services-aws.sh  deploy-services.sh  docker-compose-ipfs.yml  docker-compose.yml  nft-marketplace-server.service  requests.rest  start-server.sh
deploy/pg_init/: 1_init_seabaug_db.sh
docs/legal/: seabugTermsAndConditions.md
nix/: nft-marketplace-server.nix  upload-image.nix
src/: Api.hs  App.hs  Env.hs  Ipfs.hs  Main.hs  NftStorage.hs  Options.hs  Schema.hs
src/Api/: Auth.hs  DemoUserAuth.hs  Error.hs  Handler.hs  Types.hs
