cabal-version:       2.4
name:                nft-marketplace-server
version:             0.1.0.0
license-file:        LICENSE
author:              mlabs
maintainer:          anton@mlabs.gmail
build-type:          Simple

common common-language
    default-extensions:
      BangPatterns
      ExplicitForAll
      FlexibleContexts
      ScopedTypeVariables
      DerivingStrategies
      DeriveAnyClass
      DeriveGeneric
      StandaloneDeriving
      DeriveLift
      GeneralizedNewtypeDeriving
      DeriveFunctor
      DeriveFoldable
      DeriveTraversable
      LambdaCase
      MonoLocalBinds
      MultiParamTypeClasses
      RecordWildCards
      OverloadedStrings
      TypeFamilies
      QuasiQuotes
      TemplateHaskell
      DataKinds
      TypeOperators
      TypeApplications
      FlexibleInstances
      TypeSynonymInstances
      TupleSections
      NumericUnderscores
      ImportQualifiedPost
      RankNTypes
      
common common-configs
  default-language: Haskell2010

common common-ghc-options
  Ghc-Options:
    -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas
    -fno-specialize
    -fno-strictness
    -fno-warn-orphans
    -fobject-code

executable nft-marketplace-server
  import:  common-language
  import:  common-configs
  import:  common-ghc-options  

  main-is: Main.hs
  hs-source-dirs: src
  build-depends:
      base
    , text
    , mtl
    , bytestring
    , servant
    , servant-server
    , servant-multipart
    , warp
    , wai-logger
    , exceptions
    , cryptohash-sha256
    , base16
    , esqueleto
    , persistent
    , persistent-postgresql
    , monad-logger
    , resource-pool
    , wai-extra
    , filepath
    , aeson
    , http-types
